--- a/index.html
+++ b/index.html
@@ -663,13 +663,11 @@
         font-size: clamp(3.5rem, 7vw, 7rem);
         font-weight: 900;
         line-height: 1.3;
-        margin-bottom: 2rem;
+        margin-bottom: 1.5rem;
         background: var(--gradient-gold);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        position: relative;
         letter-spacing: -2px;
-        text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       }
 
       .hero .highlight {
@@ -1876,9 +1874,6 @@
           align-items: center;
         }
 
-        .live-chat {
-          bottom: 8rem;
-        }
 
         .cookie-content {
           flex-direction: column;
@@ -2710,10 +2705,19 @@
           const timer = setInterval(() => {
             current += increment;
             if (current >= target) {
-              element.textContent = target.toLocaleString();
+              // Special case for 2 million - display as 2M+
+              if (target === 2000000) {
+                element.textContent = "2M+";
+              } else {
+                element.textContent = target.toLocaleString();
+              }
               clearInterval(timer);
             } else {
-              element.textContent = Math.floor(current).toLocaleString();
+              if (target === 2000000 && current >= 2000000) {
+                element.textContent = "2M+";
+              } else {
+                element.textContent = Math.floor(current).toLocaleString();
+              }
             }
           }, 16);
         };
