--- a/about.html
+++ b/about.html
@@ -51,6 +51,11 @@
     />
     <link
       rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      as="style"
+    />
+    <link
+      rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       as="style"
     />
@@ -66,6 +71,10 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
 
@@ -178,7 +187,7 @@
       }
 
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Rubik', sans-serif;
         background: var(--bg-primary);
         color: var(--text-primary);
         line-height: 1.6;
@@ -417,7 +426,7 @@
       }
 
       .logo {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.2rem;
         font-weight: 800;
         background: var(--gradient-gold);
@@ -557,7 +566,7 @@
         text-decoration: none;
         font-size: 2rem;
         font-weight: 600;
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         background: var(--gradient-gold);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -650,7 +659,7 @@
       }
 
       .hero h1 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: clamp(3.5rem, 7vw, 6rem);
         font-weight: 900;
         line-height: 1.3;
@@ -727,7 +736,7 @@
       }
 
       .content-section h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.5rem;
         font-weight: 800;
         margin-bottom: 2rem;
@@ -738,7 +747,7 @@
       }
 
       .content-section h3 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.8rem;
         color: var(--primary);
         margin: 2.5rem 0 1.5rem 0;
@@ -1016,7 +1025,7 @@
       }
 
       .footer-section h5 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.4rem;
         font-weight: 700;
         margin-bottom: 2rem;
@@ -1577,8 +1586,8 @@
       // Live chat widget
       const liveChat = document.getElementById('liveChat');
       liveChat.addEventListener('click', function () {
-        // Simulate opening chat
-        alert('Live chat would open here in a real implementation!');
+        // Chat functionality would be implemented here
+        console.log('Live chat clicked');
       });
 
       // Smooth scrolling for anchor links
