--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     />
     <link
       rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      as="style"
+    />
+    <link
+      rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       as="style"
     />
@@ -64,8 +69,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
 
@@ -178,7 +185,7 @@
       }
 
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Rubik', sans-serif;
         background: var(--bg-primary);
         color: var(--text-primary);
         line-height: 1.6;
@@ -417,7 +424,7 @@
       }
 
       .logo {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.2rem;
         font-weight: 800;
         background: var(--gradient-gold);
@@ -557,7 +564,7 @@
         text-decoration: none;
         font-size: 2rem;
         font-weight: 600;
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         background: var(--gradient-gold);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -659,7 +666,7 @@
       }
 
       .hero h1 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: clamp(3.5rem, 7vw, 7rem);
         font-weight: 900;
         line-height: 1.3;
@@ -724,7 +731,7 @@
         overflow: hidden;
         text-transform: uppercase;
         letter-spacing: 1px;
-        font-family: 'Inter', sans-serif;
+        font-family: 'Rubik', sans-serif;
       }
 
       .btn::before {
@@ -816,7 +823,7 @@
       }
 
       .stat-number {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 3.5rem;
         font-weight: 900;
         background: var(--gradient-primary);
@@ -851,7 +858,7 @@
       }
 
       .section-title {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: clamp(2.5rem, 5vw, 4.5rem);
         font-weight: 800;
         margin-bottom: 1.5rem;
@@ -969,7 +976,7 @@
         font-size: 1.3rem;
         color: var(--bg-primary);
         box-shadow: var(--shadow-medium);
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         border: 3px solid var(--bg-card);
         z-index: 2;
       }
@@ -1048,11 +1055,11 @@
         background: var(--gradient-primary);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
       }
 
       .casino-info h3 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.2rem;
         font-weight: 700;
         margin-bottom: 1.5rem;
@@ -1118,7 +1125,7 @@
         font-size: 1.4rem;
         font-weight: 800;
         color: var(--primary);
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
       }
 
       .spec-label {
@@ -1167,7 +1174,7 @@
       }
 
       .bonus-amount {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.2rem;
         font-weight: 800;
         background: var(--gradient-pink);
@@ -1235,7 +1242,7 @@
       }
 
       .payment-methods h4 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.8rem;
         font-weight: 700;
         text-align: center;
@@ -1298,7 +1305,7 @@
       }
 
       .newsletter-title {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 3rem;
         font-weight: 800;
         margin-bottom: 1.5rem;
@@ -1661,7 +1668,7 @@
       }
 
       .feature-card h4 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.8rem;
         font-weight: 700;
         margin-bottom: 1.5rem;
@@ -1738,7 +1745,7 @@
       }
 
       .footer-section h5 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.4rem;
         font-weight: 700;
         margin-bottom: 2rem;
@@ -2713,14 +2720,14 @@
             if (current >= target) {
               // Special case for 2 million - display as 2M+
               if (target === 2000000) {
-                element.textContent = "2M+";
+                element.textContent = '2M+';
               } else {
                 element.textContent = target.toLocaleString();
               }
               clearInterval(timer);
             } else {
               if (target === 2000000 && current >= 2000000) {
-                element.textContent = "2M+";
+                element.textContent = '2M+';
               } else {
                 element.textContent = Math.floor(current).toLocaleString();
               }
@@ -2879,8 +2886,8 @@
         // Live chat widget
         const liveChat = document.getElementById('liveChat');
         liveChat.addEventListener('click', function () {
-          // Simulate opening chat
-          alert('Live chat would open here in a real implementation!');
+          // Chat functionality would be implemented here
+          console.log('Live chat clicked');
         });
 
         // Smooth scrolling for navigation links
