--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -48,6 +48,11 @@
     />
     <link
       rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      as="style"
+    />
+    <link
+      rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       as="style"
     />
@@ -63,6 +68,10 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
 
@@ -159,7 +168,7 @@
       }
 
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Rubik', sans-serif;
         background: var(--bg-primary);
         color: var(--text-primary);
         line-height: 1.6;
@@ -398,7 +407,7 @@
       }
 
       .logo {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.2rem;
         font-weight: 800;
         background: var(--gradient-gold);
@@ -610,7 +619,7 @@
       }
 
       .hero h1 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: clamp(2.5rem, 5vw, 4rem);
         font-weight: 900;
         line-height: 1.3;
@@ -669,7 +678,7 @@
       }
 
       .content-card h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2rem;
         font-weight: 700;
         margin-bottom: 2rem;
@@ -678,7 +687,7 @@
       }
 
       .content-card h3 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.4rem;
         color: var(--primary);
         margin: 2.5rem 0 1.5rem 0;
@@ -785,7 +794,7 @@
       }
 
       .info-box h3 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         margin-bottom: 1.5rem;
         font-size: 1.4rem;
         display: flex;
@@ -820,7 +829,7 @@
       }
 
       .table-of-contents h3 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         color: var(--text-primary);
         margin-bottom: 1.5rem;
         font-size: 1.3rem;
@@ -881,7 +890,7 @@
       }
 
       .footer-section h5 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.4rem;
         font-weight: 700;
         margin-bottom: 2rem;
@@ -1748,8 +1757,8 @@
       // Live chat widget
       const liveChat = document.getElementById('liveChat');
       liveChat.addEventListener('click', function () {
-        // Simulate opening chat
-        alert('Live chat would open here in a real implementation!');
+        // Chat functionality would be implemented here
+        console.log('Live chat clicked');
       });
 
       // Smooth scrolling for table of contents
