--- a/tips.html
+++ b/tips.html
@@ -51,6 +51,11 @@
     />
     <link
       rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      as="style"
+    />
+    <link
+      rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       as="style"
     />
@@ -66,6 +71,10 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
 
@@ -178,7 +187,7 @@
       }
 
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Rubik', sans-serif;
         background: var(--bg-primary);
         color: var(--text-primary);
         line-height: 1.6;
@@ -417,7 +426,7 @@
       }
 
       .logo {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.2rem;
         font-weight: 800;
         background: var(--gradient-gold);
@@ -557,7 +566,7 @@
         text-decoration: none;
         font-size: 2rem;
         font-weight: 600;
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         background: var(--gradient-gold);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -650,7 +659,7 @@
       }
 
       .hero h1 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: clamp(3.5rem, 7vw, 7rem);
         font-weight: 900;
         line-height: 1.3;
@@ -739,7 +748,7 @@
       }
 
       .category-title {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.5rem;
         font-weight: 700;
         margin-bottom: 1rem;
@@ -817,7 +826,7 @@
       }
 
       .tip-title {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2rem;
         font-weight: 800;
         margin-bottom: 1.5rem;
@@ -893,7 +902,7 @@
       }
 
       .quick-tips h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.5rem;
         font-weight: 800;
         margin-bottom: 2rem;
@@ -947,7 +956,7 @@
       }
 
       .quick-tip h3 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.3rem;
         font-weight: 700;
         margin-bottom: 1rem;
@@ -985,7 +994,7 @@
       }
 
       .responsible-gaming h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 2.5rem;
         font-weight: 800;
         margin-bottom: 2rem;
@@ -1166,7 +1175,7 @@
       }
 
       .footer-section h5 {
-        font-family: 'Playfair Display', serif;
+        font-family: 'Righteous', sans-serif;
         font-size: 1.4rem;
         font-weight: 700;
         margin-bottom: 2rem;
@@ -1883,8 +1892,8 @@
       // Live chat widget
       const liveChat = document.getElementById('liveChat');
       liveChat.addEventListener('click', function () {
-        // Simulate opening chat
-        alert('Live chat would open here in a real implementation!');
+        // Chat functionality would be implemented here
+        console.log('Live chat clicked');
       });
 
       // Smooth scrolling for anchor links
