Added 18+ disclaimer for casino cards

--- a/index.html
+++ b/index.html
@@ -2254,6 +2254,15 @@
                   <span>Read Review</span>
                 </a>
               </div>
+              <div class="casino-footer">
+                <p>
+                  18+ • Gambling can be addictive •
+                  <a href="https://www.begambleaware.org" target="_blank"
+                    >BeGambleAware</a
+                  >
+                  • <a href="https://www.gamcare.org.uk" target="_blank">GamCare</a>
+                </p>
+              </div>
             </div>
           </div>
 
@@ -2323,6 +2332,15 @@
                   <i class="fas fa-info-circle"></i>
                   <span>Read Review</span>
                 </a>
+              </div>
+              <div class="casino-footer">
+                <p>
+                  18+ • Gambling can be addictive •
+                  <a href="https://www.begambleaware.org" target="_blank"
+                    >BeGambleAware</a
+                  >
+                  • <a href="https://www.gamcare.org.uk" target="_blank">GamCare</a>
+                </p>
               </div>
             </div>
           </div>
@@ -2398,6 +2416,15 @@
                   <span>Read Review</span>
                 </a>
               </div>
+              <div class="casino-footer">
+                <p>
+                  18+ • Gambling can be addictive •
+                  <a href="https://www.begambleaware.org" target="_blank"
+                    >BeGambleAware</a
+                  >
+                  • <a href="https://www.gamcare.org.uk" target="_blank">GamCare</a>
+                </p>
+              </div>
             </div>
           </div>
 
@@ -2467,6 +2494,15 @@
                   <i class="fas fa-info-circle"></i>
                   <span>Read Review</span>
                 </a>
+              </div>
+              <div class="casino-footer">
+                <p>
+                  18+ • Gambling can be addictive •
+                  <a href="https://www.begambleaware.org" target="_blank"
+                    >BeGambleAware</a
+                  >
+                  • <a href="https://www.gamcare.org.uk" target="_blank">GamCare</a>
+                </p>
               </div>
             </div>
           </div>
